--- a/task_manager/templates/base.html
+++ b/task_manager/templates/base.html
@@ -14,12 +14,39 @@
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent">
         <span class="navbar-toggler-icon"></span>
       </button>
+      {% if request.user.is_authenticated %}
       <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users_list' %}">Пользователи</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/statuses/">Статусы</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/labels/">Метки</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tasks/">Задачи</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
           
+          <form action="{% url 'logout' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="csrfmiddlewaretoken" value="cpnSBC98G0tb3gVOLfAPNr2TXP2mWIuFAYzSDDUNTkSDgoajS5xvkDbxx2nMdwNf">
+            <input class="btn nav-link" type="submit" value="Выход">
+          </form>
+        
+        </ul>
+      </div>
+      </nav>
+      {% else %}
+      <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'users_list' %}">Пользователи</a>
+        </li>
         </ul>
         <ul class="navbar-nav">
           
@@ -33,6 +60,7 @@
         </ul>
       </div>
     </nav>
+    {% endif %}
     {% endblock %}
     {% block content %}{% endblock %}
     {% block footer %}
