--- a/task_manager/templates/users/update.html
+++ b/task_manager/templates/users/update.html
@@ -8,7 +8,8 @@
 
     </h1>
     
-<form method="post">
+<form method="post" action="{% url 'user_update' user.id %}">
+{% csrf_token %}
 <input type="hidden" name="csrfmiddlewaretoken" value="MEAxzOZcQWbAfXVnetNZ2vzJ9lqHwcu1z3mpFoePSPHQyOFzQIqSDWDpD41ctk6X">
 <div class="form-group"><label for="id_first_name">Имя</label><input type="text" name="first_name" value="{{ user.first_name }}" maxlength="150" class="form-control" placeholder="Имя" title="" required id="id_first_name"></div>
 <div class="form-group"><label for="id_last_name">Фамилия</label><input type="text" name="last_name" value="{{ user.last_name }}" maxlength="150" class="form-control" placeholder="Фамилия" title="" required id="id_last_name"></div>
