--- a/task_manager/templates/login/login.html
+++ b/task_manager/templates/login/login.html
@@ -4,6 +4,16 @@
 
 {% block content %}
   <div class="container wrapper flex-grow-1">
+
+    {% if messages %}
+        {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="close">×</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endif %}
+
     <h1 class="my-4">
         
         Вход
@@ -11,8 +21,7 @@
     </h1>
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
-      <input type="hidden" name="csrfmiddlewaretoken" value="o4wn3ku7K21jbveW30YuetN9eAZSLDtnxNHBUTMLs5KWTkzCAitoqaus2y6BcAYp">
-      <div class="form-group"><label for="id_username">Имя пользователя</label><input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" title="" required id="id_username"></div>
+      <div class="form-group"><label for="id_username">Имя пользователя</label><input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" title="" required id="id_username" value="{{ username }}"></div>
     <div class="form-group"><label for="id_password">Пароль</label><input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="Пароль" title="" required id="id_password"></div>
       <div class="form-group">
         <input class="btn btn-primary" type="submit" value="Войти">
