--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -17,9 +17,8 @@
 
     </h1>
     
-<form method="post" action="{% url 'logout' %}">
+<form method="post" action="{% url 'user_create' %}">
 {% csrf_token %}
-<input type="hidden" name="csrfmiddlewaretoken" value="C10cxnTdIXbCU4QtEzvBl4ZqEGryGKl2HSYei3guvEaKXELPXPTRtAAMI8i90aLp">
 <div class="form-group"><label for="id_first_name">Имя</label><input type="text" name="first_name" maxlength="150" class="form-control" placeholder="Имя" title="" required id="id_first_name"></div>
 <div class="form-group"><label for="id_last_name">Фамилия</label><input type="text" name="last_name" maxlength="150" class="form-control" placeholder="Фамилия" title="" required id="id_last_name"></div>
 <div class="form-group"><label for="id_username">Имя пользователя</label><input type="text" name="username" maxlength="150" autofocus class="form-control" placeholder="Имя пользователя" title="Обязательное поле. Не более 150 символов. Только буквы, цифры и символы @/./+/-/_." required id="id_username">
