--- a/task_manager/templates/users/all_users.html
+++ b/task_manager/templates/users/all_users.html
@@ -33,7 +33,7 @@
       <td>{{ user.id }}</td>
       <td>{{ user.username }}</td>
       <td>{{ user.first_name }} {{ user.last_name }}</td>
-      <td>{{ user.created_at }}</td>
+      <td>{{ user.date_joined }}</td>
       <td>
         <a href="{% url 'user_update' user.id %}">Изменить</a>
         <br>
