--- a/task_manager/templates/users/delete.html
+++ b/task_manager/templates/users/delete.html
@@ -9,7 +9,7 @@
     </h1>
     
 <p>Вы уверены, что хотите удалить {{ user.first_name }} {{ user.last_name }}?</p>
-<form method="post" action="{% url 'user_delete' user.id %'}">
+<form method="post" action="{% url 'user_delete' user.id %}">
 {% csrf_token %}
 <input class="btn btn-danger" type="submit" value="Да, удалить">
 </form>
