--- a/task_manager/templates/login/login.html
+++ b/task_manager/templates/login/login.html
@@ -19,13 +19,12 @@
         Вход
         
     </h1>
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'user_create' %}">
       {% csrf_token %}
-      <div class="form-group"><label for="id_username">Имя пользователя</label><input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="form-control" placeholder="Имя пользователя" title="" required id="id_username" value="{{ username }}"></div>
-    <div class="form-group"><label for="id_password">Пароль</label><input type="password" name="password" autocomplete="current-password" class="form-control" placeholder="Пароль" title="" required id="id_password"></div>
-      <div class="form-group">
-        <input class="btn btn-primary" type="submit" value="Войти">
-      </div>
-    </form>
+      {% bootstrap_form form %}
+          {% buttons %}
+            <button type="submit" class="btn btn-primary">Сохранить</button>
+          {% endbuttons %}
+      </form>
   </div>
 {% endblock %}
