--- a/task_manager/templates/tasks/list.html
+++ b/task_manager/templates/tasks/list.html
@@ -2,13 +2,14 @@
 
 {% load bootstrap4 %}
 {% block content %}
+<div class="container wrapper flex-grow-1">
 {% if messages %}
-        {% for message in messages %}
-        <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="close">×</button>
-            {{ message }}
-        </div>
-        {% endfor %}
+    {% for message in messages %}
+    <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="close">×</button>
+        {{ message }}
+    </div>
+    {% endfor %}
 {% endif %}
     <h1 class="my-4">Задачи</h1>
 
@@ -18,13 +19,15 @@
         <div class="card-body bg-light">
             <form class="form-inline center" method="get">
               {% bootstrap_form filter.form field_class="ml-2 mr-3" %}
-              {% bootstrap_button button_text button_type="submit" button_class="btn btn-primary" %}
+              {% buttons %}
+                <button type="submit" class="btn btn-primary">Показать</button>
+            {% endbuttons %}
             </form>
         </div>
     </div>
 
     <table class="table table-striped">
-        <thead class="thead-dark">
+        <thead>
             <tr>
                 <th>ID</th>
                 <th>Имя</th>
@@ -45,15 +48,16 @@
                         <td>{{ task.status }}</td>
                         <td>{{ task.author }}</td>
                         <td>{{ task.executor }}</td>
-                        <td>{{ task.date_created|date:"d.m.Y H:i" }}</td>
+                        <td>{{ task.created_at }}</td>
                         <td>
-                            <a href="{% url 'task_update' task.id %}">{% trans 'Изменить' %}</a>
+                            <a href="{% url 'task_update' task.id %}">Изменить</a>
                             <br>
-                            <a href="{% url 'task_delete' task.id %}">{% trans 'Удалить' %}</a>
+                            <a href="{% url 'task_delete' task.id %}">Удалить</a>
                         </td>
                     </tr>
                 {% endfor %}
             {% endif %}
         </tbody>
     </table>
+</div>
 {% endblock content %}
