--- a/task_manager/templates/statuses/list.html
+++ b/task_manager/templates/statuses/list.html
@@ -32,11 +32,11 @@
     <tr>
       <td>{{ status.id }}</td>
       <td>{{ status.name }}</td>
-      <td>{{ created_at }}</td>
+      <td>{{ status.created_at }}</td>
       <td>
-        <a href="/statuses/1/update/">Изменить</a>
+        <a href="{% url 'status_update' status.id %}">Изменить</a>
         <br>
-        <a href="/statuses/1/delete/">Удалить</a>
+        <a href="{% url 'status_delete' status.id %}">Удалить</a>
       </td>
     </tr>
     {% endfor %}
