--- a/task_manager/templates/users/create.html
+++ b/task_manager/templates/users/create.html
@@ -13,7 +13,7 @@
 {% csrf_token %}
 {% bootstrap_form form %}
     {% buttons %}
-      <button type="submit" class="btn btn-primary">Сохранить</button>
+      <button type="submit" class="btn btn-primary">Зарегистрировать</button>
     {% endbuttons %}
 </form>
 
