--- a/task_manager/templates/labels/list.html
+++ b/task_manager/templates/labels/list.html
@@ -17,7 +17,7 @@
 
     </h1>
     
-<a class="nav-link" href="/labels/create/">Создать метку</a>
+<a class="nav-link" href="{% url 'label_create' %}">Создать метку</a>
 <table class="table table-striped">
 <thead>
   <tr>
