--- a/task_manager/templates/tasks/view.html
+++ b/task_manager/templates/tasks/view.html
@@ -24,11 +24,11 @@
     </div>
     <div class="row p-1">
       <div class="col">Исполнитель</div>
-      <div class="col">{{ task.executor }}</div>
+      <div class="col">{{ task.executor |default:'' }}</div>
     </div>
     <div class="row p-1">
       <div class="col">Статус</div>
-      <div class="col">{{ task.status }}</div>
+      <div class="col">{{ task.status |default:'' }}</div>
     </div>
     <div class="row p-1">
       <div class="col">Дата создания</div>
