--- a/task_manager/templates/tasks/view.html
+++ b/task_manager/templates/tasks/view.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row p-1">
       <div class="col">Исполнитель</div>
-      <div class="col">{{ task.executor |default:'' }}</div>
+      <div class="col">{{ task.executor.get_full_name |default:'' }}</div>
     </div>
     <div class="row p-1">
       <div class="col">Статус</div>
