--- a/task_manager/templates/tasks/update.html
+++ b/task_manager/templates/tasks/update.html
@@ -11,7 +11,7 @@
 
     </h1>
     
-    <form method="post" action="{% url 'task_update' id %}">
+    <form method="post" action="{% url 'task_update' task.id %}">
         {% csrf_token %}
         {% bootstrap_form form %}
             {% buttons %}
